fix, memogit稀疏检出
